--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,7 @@ starlette==0.50.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.38.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+requests==2.32.5
+urllib3==2.6.
